--- a/src/main/web/chess/public/css/variables.css
+++ b/src/main/web/chess/public/css/variables.css
@@ -14,6 +14,8 @@
     --darktile: #7D591B;
     --hovertile: #47501A;
     --clicktile: #2A2F0F;
+    --piece-shadow: #432;
+    --piece-hover-shadow: #210;
     --inner-border: rgb(53, 35, 14);
     --outer-border: rgb(66, 63, 59);
 
@@ -27,6 +29,4 @@
     */
 
     --board-size: 33vw;
-
-
 }
