--- a/src/main/web/chess/public/css/menu.css
+++ b/src/main/web/chess/public/css/menu.css
@@ -8,6 +8,11 @@
     border: 3px solid var(--outer-border);
     background-color: var(--button);
     user-select: none;
+
+    
+    font-size: 1.8em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
 }
 .menu-button[loading="true"] {
     pointer-events: none; 
