--- a/src/main/web/public/css/logicboard.css
+++ b/src/main/web/public/css/logicboard.css
@@ -1,9 +1,37 @@
+:root {
+    --logic-rectangle-width: 80;
+    --logic-rectangle-height: 120;
+}
+.logic-rectangle {
+    --logic-width: var(--logic-rectangle-width);
+    --logic-height: var(--logic-rectangle-height);
+}
+
 .logic-board {
     background-color: salmon;
     grid-row-end: span 6;
     width: 100%;
     height: 100%;
 }
+
 .logic-tile {
+    z-index: 1;
+    position: absolute;
     background-color: pink;
+    width: calc(var(--logic-width) * 1px);
+    height: calc(var(--logic-height) * 1px);
+}
+
+.logic-lock {
+    z-index: 0;
+    position: relative;
+    background-color: purple;
+
+    --extra-size: 0.1; 
+    margin-top: calc(var(--logic-height) * var(--extra-size)/2 * -1px);
+    margin-left: calc(var(--logic-width) * var(--extra-size)/2 * -1px);
+    margin-bottom: calc(var(--logic-height) * calc(1 + var(--extra-size)) * -1px);
+    
+    width: calc(var(--logic-width) * 1.1px);
+    height: calc(var(--logic-height) * 1.1px);
 }
