--- a/src/main/web/public/css/logicboard.css
+++ b/src/main/web/public/css/logicboard.css
@@ -1,10 +1,19 @@
 :root {
     --logic-rectangle-width: 80;
     --logic-rectangle-height: 120;
+
+    
+    --logic-circle-diameter: 90;
 }
 .logic-rectangle {
     --logic-width: var(--logic-rectangle-width);
     --logic-height: var(--logic-rectangle-height);
+}
+
+.logic-circle {
+    --logic-width: var(--logic-circle-diameter);
+    --logic-height: var(--logic-circle-diameter);
+    border-radius: calc(var(--logic-circle-diameter) * 0.5px);
 }
 
 .logic-board {
@@ -27,11 +36,7 @@
     position: relative;
     background-color: purple;
 
-    --extra-size: 0.1; 
-    margin-top: calc(var(--logic-height) * var(--extra-size)/2 * -1px);
-    margin-left: calc(var(--logic-width) * var(--extra-size)/2 * -1px);
-    margin-bottom: calc(var(--logic-height) * calc(1 + var(--extra-size)) * -1px);
-    
-    width: calc(var(--logic-width) * 1.1px);
-    height: calc(var(--logic-height) * 1.1px);
+    margin-bottom: calc(var(--logic-height) * -1px);
+    width: calc(var(--logic-width) * 1px);
+    height: calc(var(--logic-height) * 1px);
 }
