--- a/src/main/web/public/css/variables.css
+++ b/src/main/web/public/css/variables.css
@@ -16,6 +16,7 @@
     --clicktile: #2A2F0F;
     --piece-shadow: #432;
     --piece-hover-shadow: #210;
+    --gem-hover-shadow: #214;
     --inner-border: rgb(53, 35, 14);
     --outer-border: rgb(66, 63, 59);
 
