--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -1,8 +1,8 @@
 #home-navbar {
-    background-color: var(--secondary);
+    background-color: var(--primary-2);
 
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     column-gap: 1%;
     max-height: 3%;
     margin: 0;
@@ -17,7 +17,7 @@
     justify-content: center;
 }
 
-.nav-element-container > * {
+.nav-element-container > :not(span) {
     width: 100%;
     height: 100%;
 
@@ -25,9 +25,19 @@
     font-size: 1.4em;
     text-align: center;
     text-decoration: none;
-    background-color: var(--tertiary);
+    background-color: var(--primary-3);
+
+    border-radius: 0.1em;
+
+    &:hover {
+        background-color: var(--primary-4);
+    }
+    
+    &:active {
+        background-color: var(--primary-5);
+    }
 }
 
-.nav-element-container > span {
-    background-color: var(--secondary);
+.theme-toggle {
+    border: none;
 }
