--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -7,6 +7,10 @@
     max-height: 3%;
     margin: 0;
     padding: 0;
+    padding-top: 0.2%;
+    padding-bottom: 0.45%;
+
+    background-image: linear-gradient(180deg, var(--primary-2), var(--primary-2) 80%, var(--primary-1));
 }
 
 .nav-element-container {
