--- a/frontend/src/css/JoinLobbyModal.css
+++ b/frontend/src/css/JoinLobbyModal.css
@@ -4,26 +4,46 @@
     margin-left: auto;
     margin-top: 1vw;
     margin-right: 1vw;
+
     width: 3vw;
     height: 3vw;
-
     border: none;
-    border-radius: 0.1em;
+    font-size: 1vw;
+    border-radius: 0.5em;
+    background-color: var(--primary-4);
 }
 
 .join-modal-title {
     display: block;
-    font-size: 0.6em;
-    text-align: center;
+
     margin-top: 0.9em;
+    
+    font-size: 5vw;
     font-weight: bold;
+    text-align: center;
+}
+
+#lobby-code {
+    margin-top: 5%;
+    display: grid;
+    grid-template-columns: 3fr 2fr 1fr 3fr;
+    column-gap: 0.5vw;
 }
 
 #lobby-code-prompt {
-    display: block;
-    font-size: 0.3em;
-    
-    margin-top: 1.8em;
-    margin-left: auto;
-    margin-right: auto;
+    display: inline;
+    width: 30vw;
+    font-size: 3vw;
+    border: none;
+    border-radius: 0.5vw;
+    background-color: var(--primary-4);
+    grid-column: 2;
+}
+
+#lobby-code-submit {
+    font-size: 3vw;
+    width: 4vw;
+    border-radius: 0.5vw;
+    background-color: var(--primary-5);
+    grid-column: 3;
 }
