--- a/frontend/src/css/Modal.css
+++ b/frontend/src/css/Modal.css
@@ -5,12 +5,10 @@
     z-index: 1000;
     transform: translate(-50%, -50%);
 
-    width: 60%;
-    height: 60%;
+    width: 60vw;
+    height: min(60vh, 40vw);
     background-color: var(--primary-1);
-    border-radius: 0.1em;
-
-    font-size: 10em;
+    border-radius: 0.5em;
 }
 
 .overlay {
