--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -12,6 +12,8 @@
 body {
     background-color: var(--primary-1);
     margin: 0px;
+    width: 100%;
+    height: 100%;
 }
 
 .title {
@@ -27,10 +29,10 @@ body {
 
 .big-button {
     display: block;
-    font-size: 2vw;
+    font-size: max(2vh, 2vw);
     
-    width: 40vw;
-    height: 4vw;
+    width: max(40vh, 40vw);
+    height: max(4vh, 4vw);
 
     margin-top: 0.4em;
     margin-left: auto;
