--- a/frontend/src/css/JoinLobbyModal.css
+++ b/frontend/src/css/JoinLobbyModal.css
@@ -23,7 +23,7 @@
     text-align: center;
 }
 
-#lobby-code {
+#lobby-code-form {
     margin-top: 5%;
     display: grid;
     grid-template-columns: 3fr 2fr 1fr 3fr;
@@ -46,4 +46,12 @@
     border-radius: 0.5vw;
     background-color: var(--primary-5);
     grid-column: 3;
+}
+
+#invalid-lobby-code {
+    font-size: 1.1vw;
+    margin-top: 1vh;
+    text-align: center;
+    
+    color: var(--error-text);
 }
