--- a/frontend/src/css/Modal.css
+++ b/frontend/src/css/Modal.css
@@ -8,7 +8,7 @@
     width: 60vw;
     height: min(60vh, 40vw);
     background-color: var(--primary-1);
-    border-radius: 0.5em;
+    border-radius: 0.9vw;
 }
 
 .overlay {
