--- a/frontend/src/css/GamePage.css
+++ b/frontend/src/css/GamePage.css
@@ -1,6 +1,30 @@
-
 body {
-  background-color: var(--nofocus);
   margin: 0px;
   position: fixed;
+  max-width: 100dvw;
+  max-height: 100dvh;
+}
+
+#game-root {
+    padding: 2dvh 2dvw 2dvw 2dvh;
+    width: max(90dvw, 100%);
+    height: 90dvh;
+
+    display: grid;
+    grid-template-columns: 75dvw 25dvw;
+    grid-template-rows: 100%;
+}
+
+#game-left {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+#game-right {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    align-items: center;
 }
