--- a/frontend/src/css/chessboard.css
+++ b/frontend/src/css/chessboard.css
@@ -1,21 +1,28 @@
-
-#board-root {
+:root {
+    --board-size: min(70dvh,70dvw);
+    --piece-shadow: var(--text);
+    --piece-hover-shadow: #210;
+    --gem-hover-shadow: #214;
+}
+/* #board-root {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--semifocus);
-}
+    background-color: var(--primary-4);
+} */
 
-.chessboard {
+#chessboard {
+    margin-bottom: 10dvh;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows:    repeat(8, 1fr);
 
+    
     width: var(--board-size);
     height: var(--board-size);
 
     padding: 10px;
-    background-color: var(--outer-border);
+    background-color: var(--primary-4);
 }
 
 .chess-tile:nth-child(16n + 1),
@@ -26,29 +33,30 @@
 .chess-tile:nth-child(16n + 12),
 .chess-tile:nth-child(16n + 14),
 .chess-tile:nth-child(16n + 16){
-    background-color: var(--lighttile);
+    background-color: var(--primary-2);
 }
 .chess-tile {
-    background-color: var(--darktile);
-    border: 4px solid var(--inner-border);
+    aspect-ratio : 1 / 1;
+    background-color: var(--primary-3);
+    /* border: min(.8dvw,.8dvh) solid var(--primary-3); */
     margin: -2px;
     display: flex;
     justify-content: center;
     align-items: center;
     user-select: none;
 
-    font-size: 3.5em;
+    font-size: min(3.5dvh,3.5dvh);
     font-family: monospace;
     font-weight: bolder;
 
-    &:hover {background-color: var(--hovertile);}
-    &:active {background-color: var(--clicktile);}
+    &:hover {background-color: var(--primary-4);}
+    /* &:active {background-color: var(--primary-5);} */
 }
 .chess-tile > img {
     height: 100%;
     margin: -30vw;
     object-fit: contain;
-    filter: drop-shadow(4px 0px 3px var(--piece-shadow) );
+    /* filter: drop-shadow(min(.2dvw,.2dvh) 0px min(.2dvw,.2dvh) var(--piece-shadow) ); */
 
-    &:hover, &:active {filter: drop-shadow(4px 0px 2px var(--piece-hover-shadow) );}
+    /* &:hover, &:active {filter: drop-shadow(4px 0px 2px var(--piece-hover-shadow) );} */
 }
