--- a/frontend/src/css/common/MainNavBar.css
+++ b/frontend/src/css/common/MainNavBar.css
@@ -1,10 +1,11 @@
-#home-navbar {
+#main-navbar {
     background-color: var(--primary-2);
 
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: 2% 1fr 1fr 1fr 4fr 1fr 2%;
     column-gap: 1%;
-    max-height: 3%;
+
+
     margin: 0;
     padding: 0;
     padding-top: 0.2%;
@@ -13,35 +14,27 @@
     background-image: linear-gradient(180deg, var(--primary-2), var(--primary-2) 80%, var(--primary-1));
 }
 
-.nav-element-container {
+.main-navbar-element {
     max-width: 100%;
     height: 100%;
-
     display: flex;
     justify-content: center;
 }
 
-.nav-element-container > :not(span) {
+.main-navbar-element > :not(.navbar-ignore) {
     width: 100%;
     height: 100%;
 
     padding: 0;
-    font-size: 1.4em;
+    font-size: max(100%, 2.4dvh, 1.2dvw);
     text-align: center;
     text-decoration: none;
     background-color: var(--primary-3);
 
-    border-radius: 0.2em;
-
     &:hover {
         background-color: var(--primary-4);
     }
-    
     &:active {
         background-color: var(--primary-5);
     }
-}
-
-.theme-toggle {
-    border: none;
 }
