--- a/frontend/src/css/common/Modal.css
+++ b/frontend/src/css/common/Modal.css
@@ -1,17 +1,16 @@
-.modal {
+#modal-content {
     position: fixed;
     top: 50%;
     left: 50%;
     z-index: 1000;
     transform: translate(-50%, -50%);
 
-    width: 60vw;
-    height: min(60vh, 40vw);
+    width: 60dvw;
+    height: min(60dvh, 40dvw);
     background-color: var(--primary-1);
-    border-radius: 0.9vw;
 }
 
-.overlay {
+#modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
