--- a/frontend/src/css/game/GamePage.css
+++ b/frontend/src/css/game/GamePage.css
@@ -1,18 +1,25 @@
-body {
-  margin: 0px;
-  position: fixed;
-  max-width: 100dvw;
-  max-height: 100dvh;
-}
-
 #game-root {
-    padding: 2dvh 2dvw 2dvw 2dvh;
-    width: max(90dvw, 100%);
-    height: 90dvh;
+    /* padding: 2dvh 5dvw 15dvw 2dvh; */
+    width: 100dvw;
+    height: 100dvh;
 
     display: grid;
-    grid-template-columns: 75dvw 25dvw;
-    grid-template-rows: 100%;
+    grid-template:
+        "head head" 0.2fr
+        "left right" 10fr
+        "foot foot" 0.2fr / 1fr 1fr;
+}
+#main-navbar {
+    grid-area: head;
+}
+#game-body {
+    grid-area: body;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+}
+#main-footer {
+    grid-area: foot;
 }
 
 #game-left {
@@ -20,11 +27,15 @@ body {
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 #game-right {
     display: flex;
     flex-flow: column wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
 }
