--- a/frontend/src/css/home/HomePage.css
+++ b/frontend/src/css/home/HomePage.css
@@ -1,24 +1,6 @@
-:root {
-    width: 100%;
-    height: 100%;
-}
-
-:root * {
-    color: var(--text);
-    font-family: Arial, Helvetica, sans-serif;
-    user-select: none;
-}
-
-body {
-    background-color: var(--primary-1);
-    margin: 0px;
-    width: 100%;
-    height: 100%;
-}
-
 .title {
-    font-size: 9vw;
-    width: 100vw;
+    font-size: max(4dvh, 9dvw);
+    width: 100dvw;
 
     padding: 0;
     margin: 0;
@@ -29,24 +11,20 @@ body {
 
 .big-button {
     display: block;
-    font-size: max(2vh, 2vw);
+    font-size: max(3vh, 2vw);
     
-    width: max(40vh, 40vw);
-    height: max(4vh, 4vw);
+    width: max(35dvh, 40dvw);
+    height: max(4dvh, 4dvw);
 
     margin-top: 0.4em;
     margin-left: auto;
     margin-right: auto;
     padding: 0;
 
-    border: none;
-    border-radius: 0.2em;
     background-color: var(--primary-2);
-    
     &:hover {
         background-color: var(--primary-3);
     }
-    
     &:active {
         background-color: var(--primary-4);
     }
