--- a/frontend/src/css/game/GamePage.css
+++ b/frontend/src/css/game/GamePage.css
@@ -8,7 +8,9 @@
         "head head" 0.2fr
         "left right" 10fr
         "foot foot" 0.5fr / 10fr 6fr;
+    background-image: linear-gradient(0deg, var(--primary-1) 0%, var(--primary-1) 20%, var(--primary-2) 50%, var(--primary-1) 80%, var(--primary-1) 100%);
 }
+
 #main-navbar {
     grid-area: head;
 }
