--- a/frontend/src/css/common/App.css
+++ b/frontend/src/css/common/App.css
@@ -15,3 +15,15 @@ body {
     width: 100dvw;
     height: 100dvh;
 }
+
+.page-root {
+    width: 100dvw;
+    height: 100dvh;
+
+    display: grid;
+    grid-template:
+        "head" 0.2fr
+        "body" 10fr
+        "foot" 0.3fr / 1fr;
+    background-image: linear-gradient(0deg, var(--primary-1) 0%, var(--primary-1) 20%, var(--primary-2) 50%, var(--primary-1) 80%, var(--primary-1) 100%);
+}
