--- a/frontend/src/css/game/inventory/InventoryDisplay.css
+++ b/frontend/src/css/game/inventory/InventoryDisplay.css
@@ -15,7 +15,8 @@
     justify-content: center;
     align-items: center;
     border: none;
-    width: 92%;
+    /* width: 92%; */
+    width: 5dvw;
     height: 5dvw;
     margin: 4%;
 }
